--- a/social/src/app/add-article/add-article.component.html
+++ b/social/src/app/add-article/add-article.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="input-container">
             <label for="contenu">Contenu</label><br>
-            <input class="big-input" name="contenu" type="textarea" formControlName="contenu">
+            <textarea class="big-input" name="contenu" type="text" formControlName="contenu"></textarea>
         </div>
 
         <div>
